--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  page_transition: ^2.0.9
+
+  intl: ^0.17.0
+
+  shared_preferences: ^2.0.15
+
+  provider: ^6.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
