--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,18 +40,13 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   page_transition: ^2.0.9
-
   intl: ^0.17.0
-
   flag: ^6.0.0
-
   country: ^2.0.3
-
   shared_preferences: ^2.0.15
-
   open_settings: ^2.0.2
-
   provider: ^6.0.4
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
