--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - questions_for_friends.json
     - questions_to_the_partner.json
     - conversation_starter.json
+    - speak_ones_mind.json
     - somethink_logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
